# pulse-vst

./: CMakeLists.txt  PULSE_Architecture.md  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AftertouchProcessor.cpp  AftertouchProcessor.h  DrumEngine.cpp  DrumEngine.h  DrumVoice.cpp  DrumVoice.h  Envelope.cpp  Envelope.h  EnvelopeBank.cpp  EnvelopeBank.h  NoiseGenerator.cpp  NoiseGenerator.h  SamplePlayer.cpp  SamplePlayer.h  SynthOscillator.cpp  SynthOscillator.h
Source/GUI/: EnvAssignComponent.cpp  EnvAssignComponent.h  EnvelopeEditorComponent.cpp  EnvelopeEditorComponent.h  HeaderComponent.cpp  HeaderComponent.h  KnobComponent.cpp  KnobComponent.h  SampleSlotComponent.cpp  SampleSlotComponent.h  TriggerPadComponent.cpp  TriggerPadComponent.h  VoiceStripComponent.cpp  VoiceStripComponent.h  WaveformSelector.cpp  WaveformSelector.h
Source/Utility/: Constants.h  Parameters.cpp  Parameters.h
